api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.network/codelabweb: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - args:
            - /usr/local/bin/envoy
            - -c
            - /etc/envoy/envoy.json
            - -l
            - debug
            - --log-path
            - /tmp/envoy-info.log
          image: api-gateway
          name: api-gateway
          ports:
            - containerPort: 443
              hostIP: 127.0.0.1
          resources: {}
          volumeMounts:
            - mountPath: /etc/envoy/certs
              name: api-gateway-cert
            - mountPath: /etc/envoy/certs
              name: api-gateway-key
      restartPolicy: Always
      volumes:
        - name: api-gateway-cert
          secret:
            items:
              - key: api-gateway-cert
                path: cert.pem
            secretName: api-gateway-cert
        - name: api-gateway-key
          secret:
            items:
              - key: api-gateway-key
                path: key.pem
            secretName: api-gateway-key
status: {}
