code-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: code-runner
  name: code-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-runner
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.service: code-runner
    spec:
      containers:
        - args:
            - python3
            - /service/service.py
          name: code-runner
          resources: {}
          volumeMounts:
            - mountPath: /service-config
              name: service-config
              subPath: service-config
            - mountPath: /var/run/docker.sock
              name: code-runner-claim0
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: config.yaml
                path: service-config
            name: service-config
          name: service-config
        - name: code-runner-claim0
          persistentVolumeClaim:
            claimName: code-runner-claim0
status: {}
