frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabweb: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - args:
            - npm
            - run
            - start
            - --
            - -H
            - 0.0.0.0
          image: frontend
          name: frontend
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/userdb-root-username
              name: userdb-root-username
            - mountPath: /run/secrets/userdb-root-password
              name: userdb-root-password
      restartPolicy: Always
      volumes:
        - name: userdb-root-username
          secret:
            items:
              - key: userdb-root-username
                path: userdb-root-username
            secretName: userdb-root-username
        - name: userdb-root-password
          secret:
            items:
              - key: userdb-root-password
                path: userdb-root-password
            secretName: userdb-root-password
status: {}
