problem-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
    creationTimestamp: null
    labels:
        io.kompose.service: problem-db
    name: problem-db
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: problem-db
    strategy: {}
    template:
        metadata:
            annotations:
                kompose.cmd: kompose --file test.yaml convert
                kompose.version: 1.28.0 (c4137012e)
            creationTimestamp: null
            labels:
                io.kompose.network/codelabmesh: 'true'
                io.kompose.service: problem-db
        spec:
            containers:
                - args:
                      - mongod
                      - --port
                      - '27001'
                  image: mongo:7.0.2
                  name: problem-db
                  resources: {}
                  volumeMounts:
                      - mountPath: /run/secrets/problemdb-root-username
                        name: problemdb-root-username
                      - mountPath: /run/secrets/problemdb-root-password
                        name: problemdb-root-password
                      - mountPath: /run/secrets/problemdb-username
                        name: problemdb-username
                      - mountPath: /run/secrets/problemdb-password
                        name: problemdb-password
            restartPolicy: Always
            volumes:
                - name: problemdb-root-username
                  secret:
                      items:
                          - key: problemdb-root-username
                            path: problemdb-root-username
                      secretName: problemdb-root-username
                - name: problemdb-root-password
                  secret:
                      items:
                          - key: problemdb-root-password
                            path: problemdb-root-password
                      secretName: problemdb-root-password
                - name: problemdb-username
                  secret:
                      items:
                          - key: problemdb-username
                            path: problemdb-username
                      secretName: problemdb-username
                - name: problemdb-password
                  secret:
                      items:
                          - key: problemdb-password
                            path: problemdb-password
                      secretName: problemdb-password
status: {}
