proto-builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f test.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: proto-builder
  name: proto-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proto-builder
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f test.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelab-default: "true"
        io.kompose.service: proto-builder
    spec:
      containers:
        - args:
            - generate
            - --template
            - /etc/buf/buf.gen.yaml
          image: proto-builder
          name: proto-builder
          resources: {}
          volumeMounts:
            - mountPath: /build/protobufs
              name: proto-builder-claim0
          workingDir: /build
      restartPolicy: Always
      volumes:
        - name: proto-builder-claim0
          persistentVolumeClaim:
            claimName: proto-builder-claim0
status: {}
