statsd-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: statsd-exporter
  name: statsd-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: statsd-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.service: statsd-exporter
    spec:
      containers:
        - image: prom/statsd-exporter:latest
          name: statsd-exporter
          resources: {}
      restartPolicy: Always
status: {}
