status-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: status
  name: status
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: status
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.service: status
    spec:
      containers:
        - args:
            - python3
            - /service/service.py
          name: status
          resources: {}
          volumeMounts:
            - mountPath: /service-config
              name: service-config
              subPath: service-config
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: config.yaml
                path: service-config
            name: service-config
          name: service-config
status: {}
