submission-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f test.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: submission-db
  name: submission-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: submission-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f test.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.service: submission-db
    spec:
      containers:
        - args:
            - mongod
            - --port
            - "27002"
          image: mongo:7.0.2
          name: submission-db
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/submissiondb-root-username
              name: submissiondb-root-username
            - mountPath: /run/secrets/submissiondb-root-password
              name: submissiondb-root-password
            - mountPath: /run/secrets/submissiondb-username
              name: submissiondb-username
            - mountPath: /run/secrets/submissiondb-password
              name: submissiondb-password
      restartPolicy: Always
      volumes:
        - name: submissiondb-root-username
          secret:
            items:
              - key: submissiondb-root-username
                path: submissiondb-root-username
            secretName: submissiondb-root-username
        - name: submissiondb-root-password
          secret:
            items:
              - key: submissiondb-root-password
                path: submissiondb-root-password
            secretName: submissiondb-root-password
        - name: submissiondb-username
          secret:
            items:
              - key: submissiondb-username
                path: submissiondb-username
            secretName: submissiondb-username
        - name: submissiondb-password
          secret:
            items:
              - key: submissiondb-password
                path: submissiondb-password
            secretName: submissiondb-password
status: {}
