submission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file test.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: submission
  name: submission
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: submission
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file test.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/codelabmesh: "true"
        io.kompose.service: submission
    spec:
      containers:
        - args:
            - python3
            - /service/service.py
          name: submission
          resources: {}
          volumeMounts:
            - mountPath: /service-config
              name: service-config
              subPath: service-config
            - mountPath: /run/secrets/submissiondb-root-username
              name: submissiondb-root-username
            - mountPath: /run/secrets/submissiondb-root-password
              name: submissiondb-root-password
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: config.yaml
                path: service-config
            name: service-config
          name: service-config
        - name: submissiondb-root-username
          secret:
            items:
              - key: submissiondb-root-username
                path: submissiondb-root-username
            secretName: submissiondb-root-username
        - name: submissiondb-root-password
          secret:
            items:
              - key: submissiondb-root-password
                path: submissiondb-root-password
            secretName: submissiondb-root-password
status: {}
